--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node --max-old-space-size=8192 ./dist/crawler.js",
     "login": "node ./dist/login.js",
-    "dev": "tsc -W"
+    "dev": "tsc -W",
+    "a9": "node ./dist/a9.js",
+    "gs": "node ./dist/gamersky.js"
   },
   "repository": {
     "type": "git",
@@ -19,11 +21,15 @@
   },
   "homepage": "https://github.com/jackz3/mstar_crawler#readme",
   "devDependencies": {
+    "graphql": "^16.4.0",
     "playwright": "^1.19.0",
     "typescript": "^4.5.5"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "cheerio": "^1.0.0-rc.10",
     "csv-parse": "^5.0.4",
-    "csv-stringify": "^6.0.5"
+    "csv-stringify": "^6.0.5",
+    "graphql-request": "^4.2.0"
   }
 }
